# anchor-examples

./: Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/counter/: Cargo.toml
programs/counter/src/: lib.rs
programs/hello_world/: Cargo.toml
programs/hello_world/src/: lib.rs
programs/movie_review/: Cargo.toml
programs/movie_review/src/: lib.rs
sdk/: counter.ts
sdk/account/: account.ts
sdk/programs/: counter.spec.ts  counter.ts
tests/: counter.spec.ts  counter.ts  hello_world.ts
utils/: index.ts  keypair.ts
